# oxidize

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY_QUICKSTART.md  Dockerfile.server  IMPLEMENTATION_STATUS.md  README.md  deploy-oracle.sh  emergency-kill.sh  entrypoint.sh  example-config-client.toml  example-config-server.toml  fly.toml  install.sh  oxidize.service  test-e2e.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/get-version/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  deploy.yml  ml-training.yml  mobile-deploy.yml  release.yml  server.yml
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/fastlane/: Appfile  Fastfile  Matchfile
app/scripts/: generate-icons.mjs
app/src/: App.svelte
app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json  mobile.json
app/src-tauri/icons/: .gitkeep  icon.icns
app/src-tauri/scripts/: nsis-hooks.nsi  postinstall-macos.sh  postinstall.sh  preremove.sh
app/src-tauri/src/: commands.rs  lib.rs  main.rs  mobile_client.rs
app/src/lib/: Analytics.svelte  ServerList.svelte  Settings.svelte  Stats.svelte  types.ts
client/: Cargo.toml
client/src/: client.rs  config.rs  daemon.rs  dns_cache.rs  lib.rs  main.rs  speedtest.rs  tun_handler.rs  xdp_handler.rs
client/tests/: config_tests.rs  tun_tests.rs
common/: Cargo.toml
common/benches/: perf_bench.rs
common/examples/: keygen.rs
common/src/: adaptive_dict.rs  adaptive_fec.rs  advanced_ml.rs  af_xdp.rs  ai_engine.rs  auth.rs  bbr_v3.rs  bbr_v4.rs  benchmark.rs  compression.rs  congestion_control.rs  connection_migration.rs  connection_pool.rs  crypto_accel.rs  deep_packet_inspection.rs  dpdk.rs  edge_cache.rs  fec.rs  handoff_prediction.rs  high_perf_tun.rs  io_uring_impl.rs  io_uring_support.rs  kernel_bypass.rs  ktls.rs  lib.rs  low_latency.rs  metrics.rs  ml_data_quality.rs  ml_integration.rs  ml_models.rs  ml_optimized.rs  ml_pacing.rs  ml_training.rs  model_hub.rs  mptcp_redundancy.rs  multipath.rs  optimization_stats.rs  oxide_engine.rs  oxide_memory.rs  oxide_simd.rs  (+26 more)
common/src/advanced_ml/: ab_testing.rs  federated_learning.rs  multi_agent_rl.rs
common/src/af_xdp/: config.rs  flash.rs  linux_impl.rs  mod.rs  stats.rs  stub_impl.rs  utils.rs  xdp_loader.rs
common/src/ebpf/: loader.rs  mod.rs  xdp_redirect.rs
common/src/high_perf_tun/: mod.rs  unix.rs  windows.rs
common/src/quic_dpdk/: connection.rs  crypto.rs  dpdk_bindings.rs  eal.rs  endpoint.rs  mbuf.rs  mod.rs  packet.rs  pmd.rs  runtime.rs  socket.rs  stream.rs  tls.rs
common/src/quic_xdp/: adaptive_ml.rs  connection.rs  crypto.rs  ecn.rs  frame.rs  ml_lookup.rs  mod.rs  multipath.rs  onnx_ml.rs  packet.rs  qat_crypto.rs  runtime.rs  stream.rs
common/src/rohc/: compressor.rs  decompressor.rs  encoding.rs  mod.rs  profiles.rs  rtp.rs
common/tests/: auth_extended_tests.rs  compression_tests.rs  dpi_tests.rs  metrics_tests.rs  multipath_extended_tests.rs  optimization_tests.rs  packet_tests.rs  protocol_tests.rs  varint_extended_tests.rs
daemon/: Cargo.toml  oxidize-daemon.service  oxidize-server.socket
daemon/src/: main.rs
deploy/scripts/: setup-oracle.sh
deploy/systemd/: oxidize.service
docs/: ADVANCED_ML.md  AF_XDP.md  AI.md  BBRV4.md  BENCHMARK_COMPARISON.md  CHANGELOG.md  DEEP_LEARNING.md  DEPLOY.md  DEPLOY_ORACLE.md  DOWNLOADS.md  INSTALL.md  KERNEL_BYPASS.md  ML_DATA_QUALITY.md  MOBILE_DEPLOYMENT.md  MOBILE_SETUP.md  OPTIMIZATIONS.md  OXIDE_ENGINE.md  OXTUNNEL.md  QUIC_XDP.md  ROHC.md  SECURITY.md  STREAMING.md  TUN.md  TUN_QUIC_IMPLEMENTATION.md  VULTR_DEPLOYMENT.md  ZERO-DOWNTIME.md
docs/latitude/: LATITUDE_DEPLOYMENT.md
docs/vultr/: VULTR_DEPLOYMENT.md
hf_repo/: README.md  config.json  dqn_congestion.safetensors  hf_push.sh  lstm_loss_predictor.safetensors  ppo_congestion.safetensors  transformer_loss.safetensors
infrastructure/ansible/: ansible.cfg
infrastructure/ansible/inventory/: hosts  terraform.py
infrastructure/ansible/playbooks/: deploy.yml  setup.yml
infrastructure/ansible/roles/common/tasks/: main.yml
infrastructure/ansible/roles/dpdk/tasks/: bind_nic.yml  hugepages.yml  install.yml  iommu.yml  main.yml  performance.yml
infrastructure/ansible/roles/oxidize/handlers/: main.yml
infrastructure/ansible/roles/oxidize/tasks/: config.yml  deploy.yml  main.yml  service.yml  tls.yml
infrastructure/ansible/roles/oxidize/templates/: auth.env.j2  oxidize.service.j2  server.toml.j2
infrastructure/ansible/roles/xdp/tasks/: main.yml
infrastructure/terraform/: main.tf  servers.auto.tfvars  variables.tf
infrastructure/terraform/templates/: inventory.tpl
scripts/: generate-auth-keys.sh  hf_sync.py  install-daemon-macos.sh  install-daemon-windows.ps1  install-daemon.sh  iptables-ddos-protection.sh  realtime-stats.sh  uninstall-windows.ps1  uninstall.sh  vultr-bind-nic.sh  vultr-deploy.sh  vultr-setup.sh  xdp-setup.sh  zero-downtime-deploy.sh
scripts/dpdk/: bind-nic.sh  install-dpdk.sh  setup-hugepages.sh
scripts/latitude/: cleanup-dpdk.sh  latitude-api.sh  latitude-deploy.sh  latitude-setup.sh
scripts/vultr/: vultr-deploy.sh  vultr-setup.sh
scripts/xdp/: setup-xdp.sh
server/: Cargo.toml
server/src/: cache.rs  config.rs  connection.rs  forwarder.rs  graceful.rs  grafana_dashboard.json  high_perf.rs  high_perf_pipeline.rs  lib.rs  main.rs  mesh_manager.rs  mobile_server.rs  oxtunnel_server.rs  prometheus.rs  quic_xdp_server.rs  rate_limiter.rs  server.rs  tls.rs  tun_forwarder.rs  wireguard.rs  xdp_forwarder.rs  xdp_handler.rs
server/tests/: config_tests.rs  integration_tests.rs  rate_limiter_tests.rs
