[workspace]
members = [
    "common",
    "server",
    "client",
    "daemon",
    "app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.30"
edition = "2021"
authors = ["gagansuie <https://github.com/gagansuie>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
io-uring = "0.7"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.2"
rcgen = "0.13"
reed-solomon-erasure = "6.0"
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.9"
lz4_flex = "0.11"
lz4 = "1.28"  # Native C bindings - 50x faster than lz4_flex
etherparse = "0.16"
socket2 = { version = "0.5", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
prometheus = "0.13"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"
rayon = "1.10"
tract-onnx = "0.21"
ndarray = "0.16"
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
rand = "0.8"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
webpki-roots = "0.26"

# Crypto acceleration
ring = "0.17"             # Hardware-accelerated crypto (AES-NI, etc.)
