[workspace]
members = [
    "common",
    "server",
    "client",
    "daemon",
    "app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.4.18"
edition = "2021"
authors = ["gagansuie <https://github.com/gagansuie>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
reed-solomon-erasure = "6.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.9"
lz4_flex = "0.11"
lz4 = "1.28"  # Native C bindings - 50x faster than lz4_flex
etherparse = "0.16"
socket2 = { version = "0.5", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
prometheus = "0.13"
rayon = "1.10"
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
rand = "0.8"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }

# Crypto acceleration
ring = "0.17"             # Hardware-accelerated crypto (AES-NI, etc.)

# Build profiles for faster compilation
[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256       # More units = faster compile, slower code

[profile.release]
opt-level = 3
lto = "thin"              # Thin LTO is faster than fat LTO
codegen-units = 16        # Balance between compile time and optimization
strip = true              # Strip symbols for smaller binaries

[profile.dev.package."*"]
opt-level = 2             # Optimize dependencies even in dev mode

[profile.ci]
inherits = "release"
lto = false               # Disable LTO for CI - much faster builds
codegen-units = 32        # More parallel compilation
