[package]
name = "relay-client"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
name = "relay_client"
path = "src/lib.rs"

[[bin]]
name = "oxidize-client"
path = "src/main.rs"

[dependencies]
oxidize-common = { path = "../common" }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true, features = ["dangerous_configuration"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
trust-dns-resolver = "0.23"
rand = "0.8"
async-trait = "0.1"
serde_json = "1.0"
libc = "0.2"
