[package]
name = "relay-client"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
name = "relay_client"
path = "src/lib.rs"

[[bin]]
name = "oxidize-client"
path = "src/main.rs"

[dependencies]
oxidize-common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
