[package]
name = "oxidize-common"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = ["ai"]
ai = ["dep:candle-core", "dep:candle-nn", "dep:safetensors", "dep:hf-hub"]

[[bin]]
name = "oxidize-train"
path = "src/bin/oxidize_train.rs"
required-features = ["ai"]

[[bench]]
name = "perf_bench"
harness = false

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
lz4_flex = { workspace = true }
lz4 = { workspace = true }
etherparse = { workspace = true }
reed-solomon-erasure = { workspace = true }
rayon = { workspace = true }
libc = "0.2"
ring = { workspace = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
rand = { workspace = true }
hf-hub = { workspace = true, optional = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nfq = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windivert = { version = "0.6", features = ["vendored"] }

[dev-dependencies]
criterion = "0.5"

[package.metadata.cargo-machete]
ignored = ["criterion"]
