[package]
name = "oxidize-common"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = ["ai"]
ai = ["dep:candle-core", "dep:candle-nn", "dep:safetensors", "dep:hf-hub"]

[[bin]]
name = "oxidize-train"
path = "src/bin/oxidize_train.rs"
required-features = ["ai"]

[[bench]]
name = "perf_bench"
harness = false

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
lz4_flex = { workspace = true }
lz4 = { workspace = true }
etherparse = { workspace = true }
reed-solomon-erasure = { workspace = true }
rayon = { workspace = true }
libc = "0.2"
ring = { workspace = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
rand = { workspace = true }
hf-hub = { workspace = true, optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nfq = "0.2"
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(target_os = "macos")'.dependencies]
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(target_os = "windows")'.dependencies]
windivert = { version = "0.6", features = ["vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android uses libc for TUN operations - already included

[target.'cfg(target_os = "ios")'.dependencies]
# iOS uses libc for TUN operations - already included

[dev-dependencies]
criterion = "0.5"

[package.metadata.cargo-machete]
ignored = ["criterion"]
