[package]
name = "oxidize-daemon"
version = { workspace = true }
edition = "2021"
description = "Oxidize network relay daemon - handles TUN and privileged operations"

[[bin]]
name = "oxidize-daemon"
path = "src/main.rs"

[dependencies]
relay-client = { path = "../client" }
oxidize-common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["user"] }

