[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"
authors = ["Oxidize Contributors"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "oxidize-server"
path = "src/main.rs"

[dependencies]
oxidize-common = { path = "../common" }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = "0.8"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"
boringtun = { workspace = true }
base64 = { workspace = true }
libc = "0.2"
tun = "0.6"
