[package]
name = "relay-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "oxidize-server"
path = "src/main.rs"

[dependencies]
oxidize-common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = "0.8"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
libc = "0.2"
ring = { workspace = true }
rand = "0.8"
