[package]
name = "relay-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "oxidize-server"
path = "src/main.rs"

[dependencies]
oxidize-common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
libc = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
